--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,66 @@
+// Custom Theming for Angular Material
+// For more information: https://material.angular.io/guide/theming
+@use '@angular/material' as mat;
+// Plus imports for other components in your app.
+
+// Include the common styles for Angular Material. We include this here so that you only
+// have to load a single css file for Angular Material in your app.
+// Be sure that you only ever include this mixin once!
+@include mat.core();
+
+// Define the palettes for your theme using the Material Design palettes available in palette.scss
+// (imported above). For each palette, you can optionally specify a default, lighter, and darker
+// hue. Available color palettes: https://material.io/design/color/
+$e-commerce-primary: mat.define-palette(mat.$indigo-palette);
+$e-commerce-accent: mat.define-palette(mat.$pink-palette, A200, A100, A400);
+
+// The warn palette is optional (defaults to red).
+$e-commerce-warn: mat.define-palette(mat.$red-palette);
+
+// Create the theme object. A theme consists of configurations for individual
+// theming systems such as "color" or "typography".
+$e-commerce-theme: mat.define-light-theme((color: (primary: $e-commerce-primary,
+        accent: $e-commerce-accent,
+        warn: $e-commerce-warn,
+      )));
+
+// $light: #fff;
+// $white: #fff;
+
+// $body-color: #f6f8fa;
+// $primary-color: #5672f9;
+// $secondary-color: #fff;
+// $success: #59d659;
+// $black: #000;
+// $alert: #ff5252;
+// $border-color: #dedede;
+// $light-border: #F4F7F9;
+// $primary-font: 'Muli', sans-serif;
+// $secondary-font: 'Muli', sans-serif;
+// $text-color: #666;
+// $gray: #c7c7c7;
+// $heading-color: #333;
+// $dark-gray: #848484;
+
+// Variables
+
+
+// Include theme styles for core and each component used in your app.
+// Alternatively, you can import and @include the theme mixins for each component
+// that you are using.
+@include mat.all-component-themes($e-commerce-theme);
+
 /* You can add global styles to this file, and also import other style files */
+
+html,
+body {
+  height: 100%;
+}
+
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
+
+/* Importing Bootstrap SCSS file. */
+@import 'bootstrap/scss/bootstrap';
